--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+
+
+    <!------------------------------------------------------------ header start -------------------------------------------------------------->
     <header class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -35,27 +38,28 @@
             </div>
         </div>
     </header>
+    <!------------------------------------------------------------ header End ---------------------------------------------------------------->
+
+
+    <!------------------------------------------------------------ Hero Start ---------------------------------------------------------------->
     <div class="hero">
     </div>
+    <!------------------------------------------------------------ Hero End ---------------------------------------------------------------->
 
-
-
-
-    <!-- <date>
-    <time> -->
-
-
+    <!------------------------------------------------------------ Main Start ---------------------------------------------------------------->
     <main class="container">
         <!-- cols-1 cols-md-2 cols-lg-4 g-4 -->
         <div class="row" id="result">
         </div>
     </main>
+    <!------------------------------------------------------------ Main End ---------------------------------------------------------------->
 
-
-
+    <!------------------------------------------------------------ footer Start ---------------------------------------------------------------->
     <div class="footer1 navbar navbar-expand-lg d-flex justify-content-center">
         <p class="text-light"> &copy; Islam Saleh </p>
     </div>
+    <!------------------------------------------------------------ footer End ---------------------------------------------------------------->
+
     <script src="https://kit.fontawesome.com/9c7f7a5043.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="./Scripts/script.js"></script>
